Fix: Organisms/SideBar use stretch instead of fill-available scss

--- a/src/assets/_sidebar.scss
+++ b/src/assets/_sidebar.scss
@@ -123,7 +123,7 @@
 
   &.unfixed {
     position: relative;
-    height: fill-available;
+    height: stretch;
     .submenu {
       position: absolute;
     }
